packages/nicolium/src/styles/statuses.scss
/* ... */
.status-title {
  @include mixins.text($size: 2xl, $weight: medium);

  &--clamp span:first-child {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
  }

  span:first-child {
    overflow-wrap: anywhere;
  }

  button {
    @include mixins.button($theme: muted, $size: xs);

    margin-left: 0.5rem;
    vertical-align: middle;

    svg {
      width: 1rem;
      height: 1rem;
      transition: transform 150ms var(--ease-default);
    }
  }

  &[aria-expanded='true'] button svg {
    transform: rotate(180deg);
  }
}

.timeline-gap {
  --separator-border: var(--color-gray-200);
  --separator-background: var(--color-primary-50);

  display: flex;
  flex-direction: column;
  align-items: stretch;

  margin: 1rem auto;
  border-color: var(--color-gray-200);
  border-top-width: 1px;
  border-bottom-width: 1px;

  button {
    @include mixins.button($theme: transparent, $size: xs);

    svg {
      width: 1rem;
      height: 1rem;
    }
  }

  .dark & {
    border-color: var(--color-gray-800);
  }

  .dark & {
    --separator-border: var(--color-gray-800);
    --separator-background: var(--color-gray-900);
  }

  button {
    margin: 0.5rem 0;
  }

  &__separator {
    position: relative;

    height: 4rem;
    margin: 0 -1rem;

    // Adapted from https://css-tricks.com/css-borders-using-masks/
    background:
      conic-gradient(
        from -45deg at bottom,
        transparent,
        rgb(var(--separator-border)) 1deg 89deg,
        transparent 90deg
      )
      bottom/2rem calc(50% + 1px) repeat-x,
      conic-gradient(
        from 135deg at top,
        transparent,
        rgb(var(--separator-border)) 1deg 89deg,
        transparent 90deg
      )
      top / 2rem calc(50% + 1px) repeat-x;
    background-position-y:
      calc(100% + 1px),
      -1px;

    span {
      position: absolute;
      top: 0;

      display: flex;
      align-items: center;
      justify-content: center;

      width: 100%;
      height: 100%;

      font-size: var(--text-sm);
      font-style: italic;
      color: var(--color-primary-600);
      text-align: center;

      background:
        conic-gradient(
          from -45deg at bottom,
          transparent,
          rgb(var(--separator-background)) 1deg 89deg,
          transparent 90deg
        )
        bottom/2rem calc(50% + 1px) repeat-x,
        conic-gradient(
          from 135deg at top,
          transparent,
          rgb(var(--separator-background)) 1deg 89deg,
          transparent 90deg
        )
        top / 2rem calc(50% + 1px) repeat-x;

      .dark & {
        color: var(--color-primary-400);
      }
    }
  }
}

div:first-child:has(> .timeline-gap) {
  .timeline-gap {
    margin-top: 0;
    border-top: none;

    button:first-child {
      margin-top: 0;
    }
  }
}

.timeline-status {
  position: relative;

  .status-info {
    margin-top: 1rem;

    a {
      overflow: hidden;

      font-weight: bold;
      color: var(--color-gray-800);
      text-overflow: ellipsis;
      white-space: nowrap;

      .dark & {
        color: var(--color-gray-200);
      }

      &:hover {
        text-decoration: underline;
      }
    }

    &--reblog {
      svg {
        color: var(--color-green-600);
      }
    }
  }

  &--connected-bottom .status__content-wrapper {
    padding-left: 54px;

    [dir='rtl'] & {
      padding-right: 54px;
      padding-left: 0;
    }
  }

  &--deleted {
    padding: 1rem 2rem;
  }

  &__connector {
    position: absolute;
    z-index: 1;
    top: calc(28px + 42px);
    left: 1.25rem;

    width: 0.125rem;
    height: calc(100% - 42px - 8px - 1rem);

    background: var(--color-gray-200);

    .dark & {
      background: var(--color-primary-800);
    }

    .black.dark & {
      background: var(--color-gray-800);
    }

    [dir='rtl'] & {
      right: 1.25rem;
      left: auto;
    }

    &__container {
      position: relative;
    }
  }
}

div:has(> .timeline-status:not(.timeline-status--connected-bottom))
+ div:has(> .timeline-status) {
  .timeline-status {
    border-top: 1px solid var(--color-gray-200);

    .dark & {
      border-top-color: var(--color-gray-800);
    }
  }
}

.hashtags-bar {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;

  &__item {
    display: flex;
    align-items: center;

    padding: 0.25rem 0.375rem;
    border-radius: var(--radius-xs);

    font-size: var(--text-xs);
    font-weight: 500;
    line-height: var(--leading-xs);
    color: var(--color-primary-600);

    background-color: var(--color-gray-100);

    .dark & {
      color: #fff;
      background-color: var(--color-primary-700);
    }

    .dark.black & {
      background-color: var(--color-primary-900);
    }
  }

  button {
    @include mixins.text($theme: muted, $size: xs, $weight: semibold);

    &:hover {
      text-decoration: underline;
    }
  }
}

.quoted-status {
  cursor: pointer;

  display: flex;
  flex-direction: column;
  gap: 0.5rem;

  padding: 1rem;
  border: 1px solid var(--color-gray-300);
  border-radius: var(--radius-lg);

  .dark & {
    border-color: var(--color-gray-800);
  }

  &:not(&--compose) {
    &:hover:not(:has(.quoted-status:hover)) {
      background: var(--color-gray-100);

      .dark & {
        background: var(--color-primary-800);
      }
    }
  }

  &__content {
    position: relative;
    z-index: 0;

    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  .quoted-status {
    padding: 0.75rem;
  }
}

.quoted-status-indicator {
  display: flex;
  gap: 0.25rem;
  align-items: center;

  svg {
    width: 1.25rem;
    height: 1.25rem;
  }

  p {
    @include mixins.text($truncate: true);
  }
}
/* ... */

